--- a/Copernicus.Core.Tests/packages.config
+++ b/Copernicus.Core.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CraigsUtilityLibrary" version="4.0.241-beta" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.243-beta" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
@@ -15,14 +15,14 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.33-beta" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.0.18-beta" targetFramework="net45" />
-  <package id="xunit" version="2.0.0-rc3-build2880" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0-rc3-build2880" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0-rc3-build2880" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0-rc3-build2880" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.0.0-rc3-build2880" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.0.0-rc3-build1046" targetFramework="net45" />
+  <package id="xunit" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" />
 </packages>
